First Working PoC with Display, GSM and SMS support

--- a/InfernoGamesDP/InfernoGamesDP.vcxproj.filters
+++ b/InfernoGamesDP/InfernoGamesDP.vcxproj.filters
@@ -21,5 +21,13 @@
     <ClInclude Include="__vm\.InfernoGamesDP.vsarduino.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="IOFunctions.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="IOFunctions.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
