--- a/InfernoGamesDP/InfernoGamesDP.vcxproj
+++ b/InfernoGamesDP/InfernoGamesDP.vcxproj
@@ -82,6 +82,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="InfernoGamesDP.h" />
     <ClInclude Include="IOFunctions.h" />
     <ClInclude Include="__vm\.InfernoGamesDP.vsarduino.h" />
   </ItemGroup>
