--- a/InfernoGamesDP/InfernoGamesDP.vcxproj.filters
+++ b/InfernoGamesDP/InfernoGamesDP.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="IOFunctions.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="InfernoGamesDP.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="IOFunctions.cpp">
