--- a/InfernoGamesDP/InfernoGamesDP.vcxproj
+++ b/InfernoGamesDP/InfernoGamesDP.vcxproj
@@ -59,10 +59,14 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
-      <Optimization>MaxSpeed</Optimization>
+      <Optimization>Disabled</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
+      <AdditionalIncludeDirectories>$(ProjectDir)..\InfernoGamesDP;$(ProjectDir)..\..\..\hardware\arduino\avr\libraries\Wire\src;$(ProjectDir)..\..\..\libraries\MicroLCD;$(ProjectDir)..\..\..\libraries\Adafruit_NeoPixel;$(ProjectDir)..\..\..\libraries\Adafruit_FONA;$(ProjectDir)..\..\..\hardware\arduino\avr\libraries\SoftwareSerial\src;C:\Users\Micke\Documents\Arduino\libraries\MemoryFree-master;$(ProjectDir)..\..\..\hardware\arduino\avr\libraries\Wire\src\utility;$(ProjectDir)..\..\..\libraries;$(ProjectDir)..\..\..\hardware\arduino\avr\libraries;C:\Users\Micke\Documents\Arduino\libraries;$(ProjectDir)..\..\..\hardware\arduino\avr\cores\arduino;$(ProjectDir)..\..\..\hardware\arduino\avr\variants\eightanaloginputs;$(ProjectDir)..\..\..\hardware\tools\avr\avr\include;$(ProjectDir)..\..\..\hardware\tools\avr\avr\include\avr;$(ProjectDir)..\..\..\hardware\tools\avr\lib\gcc\avr\4.8.1\include;$(ProjectDir)..\..\..\hardware\tools\avr\lib\gcc\avr\4.9.2\include;$(ProjectDir)..\..\..\hardware\tools\avr\lib\gcc\avr\4.9.3\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <ForcedIncludeFiles>$(ProjectDir)__vm\.InfernoGamesDP.vsarduino.h;%(ForcedIncludeFiles)</ForcedIncludeFiles>
+      <WholeProgramOptimization>false</WholeProgramOptimization>
+      <PreprocessorDefinitions>__AVR_atmega328p__;__AVR_ATmega328P__;F_CPU=16000000L;ARDUINO=10805;ARDUINO_AVR_NANO;ARDUINO_ARCH_AVR;__cplusplus=201103L;_VMICRO_INTELLISENSE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
